# pptx_to_pdf

./: .gitignore  batch_process_test.ps1  batch_process_test.sh  fake_ocr.py  foolish_old_service.py  main.py  pyproject.toml  readme.md  readme_svc.md  service.py  supervisor.cmd  supervisor_fake_ocr.cmd  supervisor_svc.cmd  test.sh
docs/: pptx_to_pdf.md  pptx_to_pdf_worker_lifecycle.md  technical_manual.md  改造报告.md
